--- a/agent-aura-frontend/package.json
+++ b/agent-aura-frontend/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "clsx": "^2.0.0",
+    "date-fns": "^3.0.0",
+    "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zustand": "^4.4.7",
-    "axios": "^1.6.2",
-    "clsx": "^2.0.0",
-    "lucide-react": "^0.294.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.10.3",
-    "date-fns": "^3.0.0"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
