--- a/agent-aura-frontend/package.json
+++ b/agent-aura-frontend/package.json
@@ -13,7 +13,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^3.0.0",
     "lucide-react": "^0.294.0",
-    "next": "14.0.4",
+    "next": "^14.2.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
