--- a/.env.example
+++ b/.env.example
@@ -1,65 +1,42 @@
-# Environment Configuration for Agent Aura
+# Agent Aura - Root Environment Configuration Template
 # Copy this file to .env and fill in your actual values
+# DO NOT commit .env file to version control
 
 # ============================================================================
-# API KEYS
+# API Keys (REQUIRED)
 # ============================================================================
-
-# Google Gemini API Key (Required)
-# Get your key from: https://makersuite.google.com/app/apikey
 GEMINI_API_KEY=your_gemini_api_key_here
+ANTHROPIC_API_KEY=your_anthropic_api_key_here_optional
 
 # ============================================================================
-# MODEL CONFIGURATION
+# Model Configuration
 # ============================================================================
-
-# Orchestrator model (main coordinator agent)
-ORCHESTRATOR_MODEL=gemini-3-pro-preview
-
-# Worker model (sub-agents)
-WORKER_MODEL=gemini-3-pro-preview
+ORCHESTRATOR_MODEL=gemini-1.5-pro
+WORKER_MODEL=gemini-1.5-pro
 
 # ============================================================================
-# DATA PATHS
+# Data Paths
 # ============================================================================
-
-# Path to student data CSV file
 DATA_DIRECTORY=./data
 STUDENT_DATA_FILE=./data/student_data.csv
-
-# Output directory for reports and exports
 OUTPUT_DIRECTORY=./output
 
 # ============================================================================
-# RISK THRESHOLDS
+# Risk Analysis Thresholds
 # ============================================================================
-
 CRITICAL_RISK_THRESHOLD=0.90
 HIGH_RISK_THRESHOLD=0.80
 MODERATE_RISK_THRESHOLD=0.60
 LOW_RISK_THRESHOLD=0.30
 
 # ============================================================================
-# LOGGING CONFIGURATION
+# Logging Configuration
 # ============================================================================
-
 LOG_LEVEL=INFO
 LOG_FILE=agent_aura.log
 
 # ============================================================================
-# AGENT CONFIGURATION
+# Agent Configuration
 # ============================================================================
-
 MAX_ITERATIONS=3
 CONFIDENCE_LEVEL=85
-
-# ============================================================================
-# DEPLOYMENT (Optional)
-# ============================================================================
-
-# Google Cloud Project ID (for Cloud Run deployment)
-# GCP_PROJECT_ID=your-project-id
-# GCP_REGION=us-central1
-
-# Agent Engine Configuration
-# AGENT_ENGINE_ENDPOINT=your-agent-engine-endpoint
