--- a/.gitignore
+++ b/.gitignore
@@ -88,7 +88,7 @@ node_modules/
 .next/
 .turbo/
 out/
-package-lock.json
+
 yarn.lock
 pnpm-lock.yaml
 
@@ -129,3 +129,16 @@ htmlcov/
 *.tmp
 *.temp
 .cache/
+tmp/
+temp/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+debug_env.py
+verify_key.py
+check_error.txt
+pip_check_output.txt
+test_output.txt
+test_output2.txt
