Prepare for deployment: Add backend requirements and docs

--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,9 @@ LOG_FILE=agent_aura.log
 # ============================================================================
 MAX_ITERATIONS=3
 CONFIDENCE_LEVEL=85
+
+# ============================================================================
+# ElevenLabs (Voice Interface)
+# ============================================================================
+ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+ELEVENLABS_VOICE_ID=21m00Tcm4TlvDq8ikWAM
