--- a/agent-aura-backend/requirements.txt
+++ b/agent-aura-backend/requirements.txt
@@ -12,6 +12,7 @@ psycopg2-binary>=2.9.9  # Required for PostgreSQL on Render
 python-dotenv>=1.0.0
 pydantic>=2.5.3
 pydantic-settings>=2.1.0
+email-validator>=2.1.0
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 
